grammar.js
    source_file: $ => repeat(choice(
      $.declaration,
      $.statement,
      $.expression,
      $.line_comment,
      $.block_comment
    )),

    declaration: $ => choice(
      $.function_declaration,
      $.interface_method_declaration,
      $.auto_declaration,
      $.typed_declaration,
      $.const_declaration,
      $.import_statement,
      $.class_declaration,
      $.interface_declaration,
      $.enum_declaration,
    ),

    statement: $ => choice(
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.block,
      $.expression_statement,
    ),

    // Outranks set_literal so a bare `{...}` in statement position stays a block.
    // In expression position a block is not legal, so the literal wins there.
    block: $ => prec(1, seq(
      '{',
      repeat(choice(
        $.declaration,
        $.statement,
        $.expression,
        $.line_comment,
        $.block_comment
      )),
      '}'
    )),

    function_declaration: $ => prec.right(seq(
      optional('common'),
      'func',
      field('name', $.identifier),
      optional($.type_params),
      '(',
      optional($.param_list),
      ')',
      optional($.where_clause),
      'returns',
      field('return_type', $.type_name),
      $.block
    )),

    auto_declaration: $ => seq(
      'auto',
      field('name', $.identifier),
      '=',
      field('value', $.expression)
    ),

    // The initializer is optional: `TcpListener listener` declares without
    // assigning, so a value whose type has no natural zero can be bound inside
    // a `match` arm and used after it. The compiler's definite-assignment
    // analysis is what rejects a read before the write; the grammar only has to
    // admit the form.
    // `prec.dynamic` because this is a genuine ambiguity that only the runtime
    // can settle: `graph.Graph<string> g` is a declaration of a generic type,
    // but it also parses as the comparison chain `(graph.Graph < string) > g`.
    // Both are valid shapes for the expression grammar, so the conflict is not
    // resolvable statically - without a dynamic preference the parser picks the
    // comparison and an uninitialized generic declaration highlights as
    // arithmetic. A static `prec` does not reach it; GLR needs the tiebreak.
    typed_declaration: $ => prec.dynamic(1, seq(
      field('type', $.type_name),
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression)))
    )),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $.expression))
    )),

    expression_statement: $ => $.expression,

    expression: $ => choice(
      $.assignment_expression,
      $.logic_or_expression,
    ),

    logic_or_expression: $ => prec.left(seq(
      $.logic_and_expression,
      repeat(seq(syntax.operators.logical.find(op => op.symbol === '||').symbol, $.logic_and_expression))
    )),

    logic_and_expression: $ => prec.left(seq(
      $.equality_expression,
      repeat(seq(syntax.operators.logical.find(op => op.symbol === '&&').symbol, $.equality_expression))
    )),

    equality_expression: $ => prec.left(seq(
      $.comparison_expression,
      repeat(seq(choice_of(syntax.operators.comparison.filter(op => op.symbol === '==' || op.symbol === '!=').map(op => op.symbol)), $.comparison_expression))
    )),

    // `in` is a keyword rather than an entry in operators.comparison, but it
    // binds at this level: looser than `+`, tighter than `==`.
    comparison_expression: $ => prec.left(seq(
      $.sum_expression,
      repeat(seq(
        choice(choice_of(syntax.operators.comparison.map(op => op.symbol)), 'in'),
        $.sum_expression
      ))
    )),

    sum_expression: $ => prec.left(seq(
      $.product_expression,
      repeat(seq(choice_of(syntax.operators.arithmetic.filter(op => op.symbol === '+' || op.symbol === '-').map(op => op.symbol)), $.product_expression))
    )),

    product_expression: $ => prec.left(seq(
      $.power_expression,
      repeat(seq(choice_of(syntax.operators.arithmetic.filter(op => op.symbol === '*' || op.symbol === '/' || op.symbol === '%').map(op => op.symbol)), $.power_expression))
    )),

    power_expression: $ => prec.right(choice(
      seq($.unary_expression, syntax.operators.arithmetic.find(op => op.symbol === '**').symbol, $.power_expression),
      $.unary_expression
    )),

    unary_expression: $ => prec.right(choice(
      seq(choice_of([
        syntax.operators.logical.find(op => op.symbol === '!').symbol,
        syntax.operators.arithmetic.find(op => op.symbol === '-').symbol,
        syntax.operators.other.find(op => op.symbol === '&').symbol,
        syntax.operators.arithmetic.find(op => op.symbol === '*').symbol,
        syntax.operators.arithmetic.find(op => op.symbol === '++').symbol,
        syntax.operators.arithmetic.find(op => op.symbol === '--').symbol,
      ]), $.unary_expression),
      $.postfix_expression
    )),

    postfix_expression: $ => choice(
      $.call_expression,
      $.field_access,
      $.index_access,
      $.primary_expression
    ),

    call_expression: $ => prec.left(seq(
      field('function', $.call_target),
      optional($.type_args),
      '(',
      optional($.argument_list),
      ')'
    )),

    field_access: $ => prec.left(seq(
      field('object', $.member_object),
      '.',
      field('field', $.identifier)
    )),

    primary_expression: $ => choice(
      $.literal,
      $.keyword_constant,
      $.identifier,
      $.underscore,
      $.grouped_expression,
      $.tuple_literal,
      $.list_literal,
      $.set_literal,
      $.map_literal,
      $.lambda_expression
    ),

    call_target: $ => choice(
      $.identifier,
      $.grouped_expression,
      $.field_access,
      $.index_access,
      $.call_expression,
      $.lambda_expression
    ),

    member_object: $ => choice(
      $.identifier,
      $.grouped_expression,
      $.call_expression,
      $.field_access,
      $.index_access,
      $.list_literal,
      $.set_literal,
      $.map_literal,
      $.tuple_literal,
      $.literal,
      $.keyword_constant,
      $.type_name
    ),

    grouped_expression: $ => seq('(', $.expression, ')'),

    list_literal: $ => seq('[', optional($.collection_elements), ']'),

    // Collection literals take a trailing comma; call arguments do not, so this
    // is deliberately not shared with argument_list.
    collection_elements: $ => seq(
      $.expression,
      repeat(seq(',', $.expression)),
      optional(',')
    ),

    tuple_literal: $ => seq(
      '(',
      $.expression,
      ',',
      optional($.collection_elements),
      ')'
    ),

    // `{}` is the empty set and `{:}` the empty map; a non-empty literal is told
    // apart by whether the first element is followed by `:`.
    set_literal: $ => seq('{', optional($.collection_elements), '}'),

    map_literal: $ => seq(
      '{',
      choice(
        ':',
        seq(
          $.map_entry,
          repeat(seq(',', $.map_entry)),
          optional(',')
        )
      ),
      '}'
    ),

    map_entry: $ => seq(
      field('key', $.expression),
      ':',
      field('value', $.expression)
    ),

    argument_list: $ => seq(
      $.expression,
      repeat(seq(',', $.expression))
    ),

    type_name: $ => choice(
      $.reference_type,
      $.function_type,
      $.type_path
    ),

    type_args: $ => seq(
      '<',
      optional($.type_arg_list),
      '>'
    ),

    type_arg_list: $ => seq(
      $.type_arg,
      repeat(seq(',', $.type_arg))
    ),

    type_arg: $ => choice(
      $.type_name,
      $.identifier
    ),

    type_path: $ => prec.left(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional($.type_args)
    )),

    literal: $ => choice(
      $.int_literal,
      $.float_literal,
      $.boolean,
      $.char_literal,
      $.string_literal,
      $.triple_string_literal
    ),

    int_literal: _ => token(prec(1, regex_of(syntax.literals.integer.pattern))),
    string_literal: _ => token(regex_of(syntax.literals.string.single_line.pattern)),
    identifier: _ => token(regex_of(syntax.identifiers.pattern)),
  }
});
