test/corpus/bytes.txt
==================
Byte sequence literal
==================

bytes payload = b"Mux\x00\xff"

---

(source_file
  (declaration
    (typed_declaration
      (type_name
        (type_path
          (identifier)))
      (identifier)
      (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (sum_expression
                  (product_expression
                    (power_expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (literal
                              (bytes_literal))))))))))))))))
